# 5669-Project-2

./: README.md
catkin_ws/.catkin_tools/profiles/default/: devel_collisions.txt
catkin_ws/devel/: .catkin
catkin_ws/devel/.private/catkin_tools_prebuild/: .catkin  setup.sh
catkin_ws/devel/.private/catkin_tools_prebuild/lib/pkgconfig/: catkin_tools_prebuild.pc
catkin_ws/devel/.private/catkin_tools_prebuild/share/catkin_tools_prebuild/cmake/: catkin_tools_prebuildConfig.cmake
catkin_ws/devel/.private/unitree_legged_msgs/: .catkin  _setup_util.py
catkin_ws/devel/.private/unitree_legged_msgs/lib/pkgconfig/: unitree_legged_msgs.pc
catkin_ws/devel/.private/unitree_legged_msgs/share/gennodejs/ros/unitree_legged_msgs/msg/: _index.js
catkin_ws/devel/.private/unitree_legged_msgs/share/roseus/ros/unitree_legged_msgs/: manifest.l
catkin_ws/devel/.private/unitree_legged_msgs/share/unitree_legged_msgs/cmake/: unitree_legged_msgs-msg-paths.cmake  unitree_legged_msgsConfig.cmake
catkin_ws/devel/.private/unitree_legged_real/: .catkin  setup.sh
catkin_ws/devel/.private/unitree_legged_real/lib/pkgconfig/: unitree_legged_real.pc
catkin_ws/devel/.private/unitree_legged_real/lib/unitree_legged_real/: control_via_keyboard  ros_example_position  ros_example_walk  ros_udp  state_sub  twist_sub
catkin_ws/devel/.private/unitree_legged_real/share/unitree_legged_real/cmake/: unitree_legged_realConfig.cmake
catkin_ws/devel/.private/unitree_legged_sdk/: .catkin  .rosinstall  local_setup.sh
catkin_ws/devel/.private/unitree_legged_sdk/lib/pkgconfig/: a1_description.pc  aliengo_description.pc  b1_description.pc  go1_description.pc  laikago_description.pc  unitree_legged_control.pc  unitree_legged_msgs.pc  unitree_legged_sdk.pc
catkin_ws/devel/.private/unitree_legged_sdk/share/a1_description/cmake/: a1_descriptionConfig.cmake
catkin_ws/devel/.private/unitree_legged_sdk/share/aliengo_description/cmake/: aliengo_descriptionConfig.cmake
catkin_ws/devel/.private/unitree_legged_sdk/share/b1_description/cmake/: b1_descriptionConfig.cmake
catkin_ws/devel/.private/unitree_legged_sdk/share/go1_description/cmake/: go1_descriptionConfig.cmake
catkin_ws/devel/.private/unitree_legged_sdk/share/laikago_description/cmake/: laikago_descriptionConfig.cmake
catkin_ws/devel/.private/unitree_legged_sdk/share/unitree_legged_control/cmake/: unitree_legged_controlConfig.cmake
catkin_ws/devel/.private/unitree_legged_sdk/share/unitree_legged_msgs/cmake/: unitree_legged_msgs-msg-extras.cmake  unitree_legged_msgsConfig.cmake
catkin_ws/devel/.private/unitree_legged_sdk/share/unitree_legged_sdk/cmake/: unitree_legged_sdkConfig.cmake
catkin_ws/logs/unitree_legged_real/: build.cmake.000.log.stderr  build.cmake.001.log.stderr  build.cmake.002.log.stderr
catkin_ws/logs/unitree_legged_sdk/: build.cmake.000.log.stderr  build.symlink.000.log.stderr
ucf_go1_bringup/: CMakeLists.txt  README.md  package.xml
ucf_go1_bringup/config/: body_config.yaml  real_robot_control.yaml  robot_control.yaml
ucf_go1_bringup/launch/: control.launch  gazeboSim.launch  go1_debug.launch  go1_hw.launch  go1_rviz.launch
ucf_go1_bringup/rviz/: robot_gait.rviz
ucf_go1_bringup/xacro/: leg.xacro  robot.xacro  transmission.xacro
ucf_go1_control/: CMakeLists.txt  README.md  package.xml
ucf_go1_control/config/: joint_controller.yaml
ucf_go1_control/include/ucf_go1_control/: body_controller.h  csv_loader.h  go1_hw_interface.h
ucf_go1_control/profiles/: SymmetricHump.csv
ucf_go1_control/src/: body_controller.cpp  custom_hardware_interface.cpp  go1_hw_interface.cpp  go1_hw_main.cpp  joint_controller.cpp  ucf_go1_control_node.cpp
ucf_go1_util/: CMakeLists.txt  README.md  package.xml
ucf_go1_util/scripts/: function_generator.py
ucf_go1_util/urdf/: go1.urdf
ucf_go1_util/xacro/: transmission.xacro
