<?xml version="1.0"?>
<package format="2">
  <name>ucf_go1_bringup</name>
  <version>0.0.0</version>
  <description>The UCF EEL5669 ucf_go1_bringup package</description>

  <maintainer email="bmgross96@gmail.com">Brandon Gross</maintainer>
  <license>MIT</license>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>unitree_ros</build_depend>
  <build_depend>go1_description</build_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <build_export_depend>unitree_ros</build_export_depend>
  <build_export_depend>go1_description</build_export_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>unitree_ros</exec_depend>
  <exec_depend>controller_manager</exec_depend>
  <exec_depend>joint_state_controller</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>go1_description</exec_depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->
  </export>
</package>
