<?xml version="1.0"?>
<package format="2">
  <name>ucf_go1_control</name>
  <version>0.0.0</version>
  <description>The ucf_go1_control package</description>
  <maintainer email="bmgross96@gmail.com">Brandon Gross</maintainer>
  <license>MIT</license>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>nav_msgs</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>roslib</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>trajectory_msgs</build_depend>
  <build_depend>unitree_guide</build_depend>
  <build_depend>hardware_interface</build_depend>
  <build_depend>ros_control_boilerplate</build_depend>

  <build_export_depend>geometry_msgs</build_export_depend>
  <build_export_depend>nav_msgs</build_export_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>roslib</build_export_depend>
  <build_export_depend>sensor_msgs</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <build_export_depend>trajectory_msgs</build_export_depend>
  <build_export_depend>unitree_guide</build_export_depend>
  <build_export_depend>hardware_interface</build_export_depend>
  <build_export_depend>ros_control_boilerplate</build_export_depend>


  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>nav_msgs</exec_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>roslib</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>trajectory_msgs</exec_depend>
  <exec_depend>unitree_guide</exec_depend>
  <exec_depend>hardware_interface</exec_depend>
  <exec_depend>ros_control_boilerplate</exec_depend>

  <depend>unitree_legged_sdk</depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
